--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Frutiger", Helvetica, Arial, sans-serif;
     font-weight: 200;
-    font-size: 18;
+    font-size: 112.5%;
 }
 
 h1, h2 {
@@ -29,3 +29,12 @@ h2 {
     top: 0; left: 0; bottom: 0; right: 0;
 }
 
+.light-blue {
+    color: #3498db;
+}
+
+@media screen and (max-width: 620px) {
+    body {
+        font-size: 75%;
+    }
+}
